react-router&react-redux 路由增加 login登陆功能验证

--- a/app/index.html
+++ b/app/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cn">
 <head>
-	<meta charset="UTF-8">
-	<title>Document</title>
+  <meta charset="utf-8">
+  <title>白</title>
 </head>
 <body>
-	<div id="root"></div>
+  <div class="root" id="root"></div>
+ 
 </body>
 </html>
